Ajustes de Home
Ajustes de paginación de productos y exportación de excel de productos desde la BBDD. SE incorpora Recaptcha al login del admin.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/da8xc0cap/image/upload/v1763778704/LOGOICO_prl3km.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>package</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
