--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link rel="icon" type="image/svg+xml"
     href="https://res.cloudinary.com/da8xc0cap/image/upload/v1763778704/LOGOICO_prl3km.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>package</title>
+  <title>𝕴 𝕳𝖔𝖕𝖊 𝖄𝖔𝖚 𝕯𝖎𝖊 :: 𝕯𝖎𝖘𝖙𝖗𝖔 ↯</title>
+  <meta name="description"
+    content="Distro & Fanzine Chileno dedicado a la distribución y producción de Metal horripilante y políticamente incorrecto ⛧ Cds ↯ Vinilos ↯ Tapes ↯ Zines" />
+  <meta name="keywords"
+    content="Distro & Fanzine Chileno, Metal horripilante, políticamente incorrecto, Cds, Vinilos, Tapes, Zines" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
